--- a/index.html
+++ b/index.html
@@ -45,8 +45,73 @@
         </div>
     </header>
 
-    <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At tempora aliquid provident ipsam laboriosam quae eveniet iure quasi reprehenderit animi recusandae placeat repudiandae ullam ad modi voluptates harum, illum velit.</p>
+    <main class="content">
+
+        <section class="section container">
+            <h2 class="visually-hidden">Главная секция сайта Доска объявлений</h2>
+            <div class="section__body">
+                <div class="hero">
+                    <div class="hero__body">
+                        <h1 class="hero__title">Доска объявлений</h1>
+                        <div class="hero__description">
+                            <p>Обо всех важных событиях IT и Digital мира: дайджесты курсов, полезные ресурсы, митапы, конференции, хакатоны и новости от команды HiBrain</p>
+                        </div>
+
+                        <form class="hero__form search-form">
+                            <h3 class="visually-hidden">Поиск на нашем сайте</h3>
+                            <div class="search-form__field">
+                                <label class="visually-hidden" for="search">Search</label>
+                                <input class="search-form__input" id="search" name="search" type="text" placeholder="Поиск" required>
+                                <button class="search-form__button button-icon btn-reset" type="submit">
+                                    <span class="visually-hidden">Кнопка поиска на сайте</span>
+                                    <div class="button-icon__search"></div>
+                                </button>
+                            </div>
+                        </form>
+
+                    </div>
+                    <img class="hero__image-bg" src="./images/icons/hero-bg.svg" alt="" width="392" height="304" loading="lazy">
+                </div>
+            </div>
+        </section>
+
+        <section class="section container">
+
+            <header class="section__header">
+                <nav class="section__menu-categories">
+                    <ul class="section__menu-categories-list">
+                        <li class="section__menu-categories-item is-active">
+                            <button class="botton">Вся доска</button>
+                        </li>
+
+                        <li class="section__menu-categories-item">
+                            <button class="botton">Бытовая техника</button>
+                        </li>
+
+                        <li class="section__menu-categories-item">
+                            <button class="botton">Одежда</button>
+                        </li>
+
+                        <li class="section__menu-categories-item">
+                            <button class="botton">Автомобили</button>
+                        </li>
+
+                        <li class="section__menu-categories-item">
+                            <button class="botton">Телефоны</button>
+                        </li>
+                    </ul>
+                </nav>
+                <h2>Вся лента</h2>
+            </header>
+
+            <div class="section__inner">
+                <ul>
+                    <li>
+                        <article></article>
+                    </li>
+                </ul>
+            </div>
+        </section>
        
     </main>
 
